# Pico2040_FreeRTOS_Template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
App/: CMakeLists.txt  main.c
